test/errors/traits/trait_not_found/main.sk
module Main {

struct Foo {
}

instance Foo[Int] {
}

fn main() {
}

}